--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "importHelpers": true,
     "target": "es5",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "node/@types",
+      "luxon/@types"
     ],
     "lib": [
       "es2018",
