--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "sprinter",
+  "name": "planrr-sprinter",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "lit-element": "^2.1.0"
-  },
-  "devDependencies": {},
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "serve": "webpack-dev-server --mode development"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ConorHaining/Sprinter.git"
   },
-  "author": "",
+  "author": "Conor Haining",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ConorHaining/Sprinter/issues"
   },
-  "homepage": "https://github.com/ConorHaining/Sprinter#readme"
+  "homepage": "https://github.com/ConorHaining/Sprinter#readme",
+  "dependencies": {
+    "@vaadin/router": "^1.2.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^3.7.1"
+  }
 }
