--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/ConorHaining/Sprinter#readme",
   "dependencies": {
-    "@vaadin/router": "^1.2.0"
+    "@vaadin/router": "^1.2.0",
+    "lit-element": "^2.1.0"
   },
   "devDependencies": {
+    "ts-loader": "^6.0.2",
+    "typescript": "^3.5.1",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1"
