--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "serve": "webpack-dev-server --mode development --open"
+    "serve": "webpack-dev-server --mode development --open --disableHostCheck"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/ConorHaining/Sprinter#readme",
   "dependencies": {
     "@vaadin/router": "^1.2.0",
-    "lit-element": "^2.1.0"
+    "lit-element": "^2.1.0",
+    "luxon": "^1.16.0"
   },
   "devDependencies": {
+    "@types/luxon": "^1.15.1",
     "ts-loader": "^6.0.2",
     "typescript": "^3.5.1",
     "webpack": "^4.33.0",
