--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
     "compilerOptions": {
       "outDir": "./dist/",
+      "baseUrl": "./src/",
+      "moduleResolution": "node",
+      "resolveJsonModule": true,
       "noImplicitAny": true,
+      "allowSyntheticDefaultImports": true,
       "module": "es6",
       "target": "es6",
       "jsx": "react",
